Autoloading by composer
Loading by RobotLoader is required without this which should not be necessary for composer-loaded dependencies.

--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,8 @@
 	"require": {
 		"php" : ">=5.3.2",
 		"nette/nette": ">=2.0.5"
+	},
+	"autoload": {
+		"classmap": ["AssetsCollector/", "Header.php"]
 	}
 }
