--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,17 @@
 		}
 	],
 	"require": {
-		"nette/nette": ">=2.3.1"
+		"nette/application": "~2.3.0",
+		"nette/di": "~2.3",
+		"nette/finder": "~2.3.0",
+		"nette/http": "~2.3.0",
+		"nette/utils": "~2.3.0",
+		"latte/latte": "~2.3.0",
 	},
 	"autoload": {
-		"classmap": ["AssetsCollector/", "AssetsCollector/Compilers/", "Header.php"]
+		"psr-0": {
+			"RM\\AssetsCollector": "src/",
+			"RM\\Header": "src/"
+		}
 	}
 }
