--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 		"nette/finder": "~2.3.0",
 		"nette/http": "~2.3.0",
 		"nette/utils": "~2.3.0",
-		"latte/latte": "~2.3.0",
+		"latte/latte": "~2.3.0"
 	},
 	"autoload": {
 		"psr-0": {
