Fix remote https sources

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
 	"name": "rm/header",
+	"type": "library",
+	"version": "0.2.0",
 	"description": "Component for generating beuty and corect html header with only files where are realy required.",
 	"homepage": "https://github.com/romanmatyus/Header",
 	"license": ["MIT"],
