--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
 		}
 	],
 	"require": {
-		"nette/application": "~2.3.0",
-		"nette/di": "~2.3",
-		"nette/finder": "~2.3.0",
-		"nette/http": "~2.3.0",
-		"nette/utils": "~2.3.0",
-		"latte/latte": "~2.3.0"
+		"nette/application": ">=2.3.0",
+		"nette/di": ">=2.3",
+		"nette/finder": ">=2.3.0",
+		"nette/http": ">=2.3.0",
+		"nette/utils": ">=2.3.0",
+		"latte/latte": ">=2.3.0"
 	},
 	"autoload": {
 		"psr-0": {
